# selasviz

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-and-publish.yml
scripts/: demo_explorer.py
src/selasviz/: __init__.py  cli.py  colormap.py  data.py  datashader_renderer.py  explorer.py  hexbin_renderer.py  scatter_renderer.py  ui.py
tests/: test_cli.py  test_data.py  test_explorer.py  test_scatter_renderer.py  test_ui.py
