[project]
name = "selasviz"
version = "0.1.9"
description = "Interactive 2D visualization workbench for Pandas DataFrames"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.0",
    "numpy>=1.20",
    "holoviews>=1.14",
    "panel>=0.12",
    "bokeh>=2.4",
    "datashader>=0.14",
    "colorcet>=3.0",
    "astropy>=5.0",
]
authors = [{ name = "Straw674", email = "qx24@mails.tsinghua.edu.cn" }]
license = { file = "LICENSE" }
keywords = ["visualization", "pandas", "panel", "datashader"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1",
    "python-semantic-release>=9.8",
]

[project.urls]
Homepage = "https://github.com/Straw674/selasviz"
Repository = "https://github.com/Straw674/selasviz"
Issues = "https://github.com/Straw674/selasviz/issues"
Changelog = "https://github.com/Straw674/selasviz/blob/main/CHANGELOG.md"

[project.scripts]
selasviz = "selasviz.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/selasviz"]

[tool.semantic_release]
branch = "main"
commit_parser = "conventional"
allow_zero_version = true
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
upload_to_vcs_release = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
